<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Pet Buy Sell</string>
    <string name="title_section1">Submit Ad</string>
    <string name="title_section2">My Ads</string>
    <string name="title_section3">Favorite Ads</string>
    <string name="title_section4">Login</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Search</string>
    <string name="action_settings">Settings</string>
    <string name="search_hint">Search here</string>
    <string name="title_activity_search_results">Search Results</string>
    <string name="hello_world">Hello world!</string>
    <string name="save_search">Save Search</string>
    <string name="sort_recent">Most recent</string>
    <string name="sort_price_low">Price: Rs Low to High</string>
    <string name="sort_price_high">Price: Rs High to Low</string>
    
    <string-array name="dog_sub_cat">
        <item>Adult Dog</item>
        <item>Puppy</item>
    </string-array>
            
        


    <string-array name="categories">
        <item>Dogs</item>
        <item>Cats</item>
        <item>Birds</item>
        <item>Fishes</item>
        <item>Corals</item>
        <item>Reptiles</item>
        <item>Others</item>
    </string-array>
    <string-array name="dog_prices">
        <item>4000</item>
        <item>3500</item>
        <item>2000</item>
        <item>1000</item>
        <item>5000</item>
    </string-array>
    <string-array name="dog_title">
        <item>German Shepherd</item>
        <item>Labrador</item>
        <item>Doberman</item>
        <item>Pappu</item>
        <item>Tom</item>
    </string-array>
    <string-array name="dog_locations">
        <item>NSW</item>
        <item>Melbourne</item>
        <item>Sydney</item>
        <item>Someplace</item>
        <item>I only remember 2 cities</item>
    </string-array>
    <string-array name="dog_desc">
        <item>Well, the way they make shows is, they make one show. That show\'s called a pilot. Then they show that show to the people who make shows, and on the strength of that one show they decide if they\'re going to make more shows. Some pilots get picked and become television programs. Some don\'t, become nothing. She starred in one of the ones that became nothing.

Well, the way they make shows is, they make one show. That show\'s called a pilot. Then they show that show to the people who make shows, and on the strength of that one show they decide if they\'re going to make more shows. Some pilots get picked and become television programs. Some don\'t, become nothing. She starred in one of the ones that became nothing.</item>
        <item>            Well, the way they make shows is, they make one show. That show\'s called a pilot. Then they show that show to the people who make shows, and on the strength of that one show they decide if they\'re going to make more shows. Some pilots get picked and become television programs. Some don\'t, become nothing. She starred in one of the ones that became nothing.

Well, the way they make shows is, they make one show. That show\'s called a pilot. Then they show that show to the people who make shows, and on the strength of that one show they decide if they\'re going to make more shows. Some pilots get picked and become television programs. Some don\'t, become nothing. She starred in one of the ones that became nothing.</item>
        <item>Well, the way they make shows is, they make one show. That show\'s called a pilot. Then they show that show to the people who make shows, and on the strength of that one show they decide if they\'re going to make more shows. Some pilots get picked and become television programs. Some don\'t, become nothing. She starred in one of the ones that became nothing.

Well, the way they make shows is, they make one show. That show\'s called a pilot. Then they show that show to the people who make shows, and on the strength of that one show they decide if they\'re going to make more shows. Some pilots get picked and become television programs. Some don\'t, become nothing. She starred in one of the ones that became nothing.</item>
        <item> Well, the way they make shows is, they make one show. That show\'s called a pilot. Then they show that show to the people who make shows, and on the strength of that one show they decide if they\'re going to make more shows. Some pilots get picked and become television programs. Some don\'t, become nothing. She starred in one of the ones that became nothing.

Well, the way they make shows is, they make one show. That show\'s called a pilot. Then they show that show to the people who make shows, and on the strength of that one show they decide if they\'re going to make more shows. Some pilots get picked and become television programs. Some don\'t, become nothing. She starred in one of the ones that became nothing.</item>
        <item>Well, the way they make shows is, they make one show. That show\'s called a pilot. Then they show that show to the people who make shows, and on the strength of that one show they decide if they\'re going to make more shows. Some pilots get picked and become television programs. Some don\'t, become nothing. She starred in one of the ones that became nothing.

Well, the way they make shows is, they make one show. That show\'s called a pilot. Then they show that show to the people who make shows, and on the strength of that one show they decide if they\'re going to make more shows. Some pilots get picked and become television programs. Some don\'t, become nothing. She starred in one of the ones that became nothing.</item>
    </string-array>
    <string-array name="user_name">
        <item>Tom Scott</item>
        <item>Peter Parker</item>
        <item>Tony Stark</item>
        <item>Shaktiman</item>
        <item>Jaadu</item>
    </string-array>

    <string name="title_activity_single_result">SingleResultActivity</string>
    <string name="title_category_list">Categories</string>
    <string name="title_category_detail">Category Detail</string>

</resources>
